--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "require": {
         "php" : ">=5.5.0",
-        "paybreak/foundation": "^0.7.0",
+        "paybreak/foundation": "~0.8",
         "nesbot/carbon": "^1.0"
     },
     "require-dev": {
